Upload breakout game (again)
Messed up the first time

--- a/Breakout/index.html
+++ b/Breakout/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Breakout Gardner.loader.js";
+      var loaderUrl = buildUrl + "/Breakout.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Breakout Gardner.data",
-        frameworkUrl: buildUrl + "/Breakout Gardner.framework.js",
-        codeUrl: buildUrl + "/Breakout Gardner.wasm",
+        dataUrl: buildUrl + "/Breakout.data",
+        frameworkUrl: buildUrl + "/Breakout.framework.js",
+        codeUrl: buildUrl + "/Breakout.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Breakout",
