what is happening

--- a/RocketDefender/index.html
+++ b/RocketDefender/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/RocketDefender.loader.js";
       var config = {
-        dataUrl: buildUrl + "/RocketDefender.data.br",
-        frameworkUrl: buildUrl + "/RocketDefender.framework.js.br",
-        codeUrl: buildUrl + "/RocketDefender.wasm.br",
+        dataUrl: buildUrl + "/RocketDefender.data",
+        frameworkUrl: buildUrl + "/RocketDefender.framework.js",
+        codeUrl: buildUrl + "/RocketDefender.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Rocket Defender",
